--- a/lib/zanexo1.tex
+++ b/lib/zanexo1.tex
@@ -1,4 +1,4 @@
-\subsection{Primer anexo} \label{sec:anexo1}
+\subsection{Primer Anexo}~\label{sec:anexo1}
 
 \subsubsection{Inputación con Distancia de Gower}\label{sec:codigo-input-gower}
 
