--- a/main.tex
+++ b/main.tex
@@ -494,11 +494,8 @@ Gracias en último lugar a Pablo Garrido, por ser un educador referente en la Un
 \input{lib/zanexo1.tex}
 \newpage
 % ---------------- Segundo anexo --------------- %
+\input{lib/zanexo2.tex}
 \newpage
-\subsection{Segundo anexo} \label{sec:anexo2}
-
-Contenido del segundo anexo (texto, tablas, figuras, códigos, etc.)
-Contenido del segundo Anexo
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
