--- a/lib/chapter4-1.tex
+++ b/lib/chapter4-1.tex
@@ -30,9 +30,11 @@ n & \text{ es el tamaño del grupo } X \\
 m & \text{ es el tamaño del grupo } Y
 \end{align*}
 
-El estadístico $t$ calculado se compara con un valor crítico de la distribución t de Student con $n+m-2$ grados de libertad para determinar si las diferencias entre las medias son estadísticamente significativas. Si el valor $p$ asociado con el estadístico $t$ es menor que el umbral predefinido (nivel de significancia), se rechaza la hipótesis nula y se concluye que hay una diferencia significativa entre las medias.
+El estadístico $t$ calculado se compara con un valor crítico de la distribución t de Student con $n+m-2$ grados de libertad para determinar si las diferencias entre las medias son estadísticamente significativas. Si el valor $p$ asociado con el estadístico $t$ es menor que el umbral predefinido (nivel de significancia $\alpha$), se rechaza la hipótesis nula y se concluye que hay una diferencia significativa entre las medias.
 
-Este estudio se va a realizar para la \textit{Frecuencia Cardiaca}, para la \textit{Frecuencia Cardiaca Transformada por Cuantiles}, para la \textit{Frecuencia Cardiaca Escalada} y para la \textit{Saturación de Oxígeno Escalada}. 
+Este estudio se va a realizar para la \textit{Frecuencia Cardiaca}, para la \textit{Frecuencia Cardiaca Transformada por Cuantiles}, para la \textit{Frecuencia Cardiaca Escalada} y para la \textit{Saturación de Oxígeno Escalada}. Se quiere pues observar si realmente existe una diferencia significativa entre las medias de los datos de monitorización de los pacientes pediátricos que han necesitado OAF y los que no la han necesitado.
+
+Para ello partiendo de los $1440$ valores de monitorización se calcularán las medias horarias gracias al código mostrado en el Anexo~\ref{sec:anexo2}.
 
 
 
