--- a/lib/chapter3.tex
+++ b/lib/chapter3.tex
@@ -651,8 +651,7 @@ Se va a mostrar una visualización de la transformación de todos los datos de \
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.9\textwidth]{img/transformacion-frecuencia-cardiaca-edad.png}
-    \caption{Transformación de los datos de \textit{Frecuencia Cardiaca} de todos los pacientes en función de su \textit{Edad}}
-    \label{fig:transformacion-frecuencia-cardiaca-edad}
+    \caption{Transformación de los datos de \textit{Frecuencia Cardiaca} de todos los pacientes en función de su \textit{Edad}}\label{fig:transformacion-frecuencia-cardiaca-edad}
 \end{figure}
 
 \begin{table}[H]
