--- a/lib/zanexo1.tex
+++ b/lib/zanexo1.tex
@@ -78,8 +78,7 @@
   }
   
   
-  return(new_with_null) # Se devuelve al paciente con los datos imputados, es una "variable fila"
-}
+  return(new_with_null) # Se devuelve al paciente con los datos imputados, es una "variable fila"}
 \end{lstlisting}
 
 
