--- a/lib/chapter5.tex
+++ b/lib/chapter5.tex
@@ -1,4 +1,4 @@
-\section{RESULTADOS}\label{cap:resultsANDdiscussion}
+\section{RESULTADOS}\label{cap:results}
 
 \subsection{Estructura de los Resultados}\label{sec:results}
 
