--- a/main.tex
+++ b/main.tex
@@ -465,6 +465,12 @@ Gracias en último lugar a Pablo Garrido, por ser un educador referente en la Un
 \input{lib/chapter5.tex}
 \newpage
 
+\input{lib/chapter6.tex}
+\newpage
+
+\input{lib/chapter7.tex}
+\newpage
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%% - BIBLIOGRAFÍA - %%%%%%%%%%%%%%%%
